feat：优化webpack配置，代码压缩等

--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,15 @@
   </head>
   <body>
     <h1>Hello webpack=====</h1>
-    <h2>这是 H2 被处理了</h2>
+    <h2>这是 H2 被处理了00000uuuuuuuuuuuuuuuuuuuuuuu</h2>
     <h3>Sass 处理</h3>
     <div class="box"></div>
+    <div class="box_two"></div>
     <span class="iconfont icon-faxian"></span>
     <span class="iconfont icon-dashang"></span>
     <span class="iconfont icon-guanzhu"></span>
+    11111111
     <!-- <script src="../dist/static/js/base.js"></script> -->
+    <button id="btn">+!</button>
   </body>
 </html>
